--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Contraband
 APP_ENV=local
 APP_KEY=base64:t7Ipq0KWIlBcZ+LpXG6FUAmZqNKFGwkGveP3lVtFnME=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://talib.test
 
 LOG_CHANNEL=stack
 
