--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.0",
@@ -33,6 +34,7 @@
         }
     },
     "autoload": {
+        "files": ["bootstrap/Helpers.php"],
         "psr-4": {
             "App\\": "app/"
         },
