--- a/.env
+++ b/.env
@@ -24,11 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=devbenart
+MAIL_PASSWORD=iduwe@123
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_NAME=TALIBAN
+MAIL_FROM_ADDRESS=devbenart@gmail.com
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
